--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -970,6 +970,9 @@ header {
   }
   /*End Header */
   /*Hero */
+  .hero {
+    height: auto;
+  }
   .hero__content {
     justify-content: center;
     text-align: center;
@@ -983,6 +986,9 @@ header {
     width: 50%;
   }
   /*End Testimonials*/
+  .opportunities__head {
+    margin-bottom: 0;
+  }
 }
 @media screen and (max-width: 768px) {
   /* Opportunities*/
